--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="foo_label">\@foo</string>
     <string name="title_activity_compose">Compose</string>
     <string name="composeHint">What\'s happening?</string>
+    <string name="title_activity_profile">ProfileActivity</string>
 
 </resources>
